--- a/ADIN1100-Eval/Views/CableDiagnosticImageControl.xaml
+++ b/ADIN1100-Eval/Views/CableDiagnosticImageControl.xaml
@@ -4,9 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ADIN1100_Eval.Views"
+             xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
+             xmlns:converter="clr-namespace:ADIN1100_Eval.Themes.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="500">
     <UserControl.Resources>
+        <converter:FaultDetectionParameterConverter x:Key="faultDetectionParamterConverter"/>
     </UserControl.Resources>
     <Grid>
         <Grid>
@@ -17,15 +20,24 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="300"/>
             </Grid.RowDefinitions>
 
             <!--Col 0-->
             <Grid Grid.Row="0" Grid.Column="0">
-                <Border Height="100" Width="100" Background="#FF5E8FCB" CornerRadius="7" BorderThickness="0"/>
+                <Border Height="100" Width="130" Background="#FF5E8FCB" CornerRadius="7" BorderThickness="0"/>
                 <StackPanel Orientation="Vertical" VerticalAlignment="Center">
-                    <TextBlock Text="TDR" HorizontalAlignment="Center" Foreground="#FFD8D8D8" FontSize="20"/>
-                    <TextBlock Text="Engine" HorizontalAlignment="Center" Foreground="#FFD8D8D8" FontSize="20"/>
+                    <TextBlock Text="TDR Engine" HorizontalAlignment="Center" Foreground="#FFD8D8D8" FontSize="20"/>
+                    <telerik:RadButton CornerRadius='15' Width="103" Margin="0,10,0,0" Content="Start" Command="{Binding RunFaultDetectionCommand}">
+                        <!--<telerik:RadButton.CommandParameter>
+                            <MultiBinding Converter="{StaticResource faultDetectionParamterConverter}">
+                                <Binding ElementName="CableType" Path="Text"/>
+                                <Binding ElementName="CableLength" Path="Value"/>
+                                <Binding ElementName="CalibrateType" Path="Text"/>
+                                <Binding ElementName="CalculatedNVP" Path="Text"/>
+                            </MultiBinding>
+                        </telerik:RadButton.CommandParameter>-->
+                    </telerik:RadButton>
                 </StackPanel>
             </Grid>
 
@@ -78,7 +90,8 @@
                     </Grid>
                 </StackPanel>
                 <TextBlock Margin="20 190 0 0" >Distance to fault = </TextBlock>
-                <TextBlock Margin="120 190 0 0" >100.5</TextBlock>
+                <TextBlock Margin="120 190 0 0"
+                           Text="{Binding DistToFault}"/>
                 <Line Stretch="Fill" Stroke="Black" X2="1" Margin="0 120 0 0" Height="5" Width="Auto"/>
             </Grid>
 
@@ -97,7 +110,7 @@
                     </Line>
                     <Grid Margin="-32">
                         <Border Height="100" Width="30" Background="#FF0505" CornerRadius="5"/>
-                        <TextBlock Text="Open\Short" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FFD8D8D8" FontSize="15" RenderTransformOrigin="0.5,0.5">
+                        <TextBlock Text="{Binding FaultState}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FFD8D8D8" FontSize="15" RenderTransformOrigin="0.5,0.5">
                             <TextBlock.RenderTransform>
                                 <TransformGroup>
                                     <ScaleTransform/>
